syntax = "proto3";

option csharp_namespace = "Account.Grpc.Protos";
import "google/protobuf/timestamp.proto";

service AccountProtoService {
	rpc GetAccount (GetAccountRequest) returns (AccountObject);
	rpc GetAccountsForUser (GetAccountsForUserRequest) returns (AccountObjectList);
}

message GetAccountRequest {
	string id = 1;
}

message GetAccountsForUserRequest{
	string userId=1;
}

message AccountObject {
	string id=1;
	int64 accNumber=2;
	string currency=3;
	double amount=4;
	string iban=5;
	string bankid=6;
	string ownerid=7;
}

message AccountObjectList {
	repeated AccountObject items=1;
}